k8s-resources/a-little-fishy/ingress-fishy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a-little-fishy
  namespace: a-little-fishy
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: a-little-fishy-frontend-config
    networking.gke.io/managed-certificates: a-little-fishy-tls-cert
    kubernetes.io/ingress.class: "gce"
    external-dns.alpha.kubernetes.io/hostname: fishy.web.broncoctf.xyz
  labels:
    name: a-little-fishy
spec:
  defaultBackend:
    service:
      name: a-little-fishy
      port:
        number: 80
